<resources>
    <string name="app_name">NameCraft</string>

    <string name="action_settings">Settings</string>
    <string name="MainTitle">NameCraft</string>
    <string name="touch_screen">点击屏幕</string>
    <string name="start_game">开始战斗</string>
    <string name="str">力量</string>
    <string name="intel">智力</string>
    <string name="agi">敏捷</string>
    <string name="luc">幸运</string>
    <string name="atk">攻击</string>
    <string name="def">防御</string>
    <string name="userid">名字</string>
    <string name="exp">经验</string>
    <string name="money">金钱</string>
    <string name="title_activity_pvpactivity">PVPactivity</string>
    <string name="about">关于</string>
    <string name="connecting">正在连接</string>
    <string name="connect_failed">连接失败</string>
    <string name="connect_success">连接成功</string>

    <string name="confirm">确定</string>
    <string name="ret">取消</string>

    <string name="close">关闭</string>
    
    <string name="easy">简单</string>
    <string name="normal">普通</string>
    <string name="difficult">困难</string>

    <string name="unknown">未知</string>


    <string name="Ab1_1_txt">造成一定量的暴击伤害</string>
    <string name="Ab1_2_txt">吸取一定百分比的伤害作为血量</string>
    <string name="Ab2_1_txt">无视敌方部分护甲</string>
    <string name="Ab2_2_txt">将本次即将造成伤害值的一部分转换为治疗量</string>
    <string name="Ab3_1_txt">法术攻击</string>
    <string name="Ab3_2_txt">大幅回复己方血量</string>

    <string name="Ab1_1">昆仑震</string>
    <string name="Ab1_2">嗜血</string>
    <string name="Ab2_1">潜行</string>
    <string name="Ab2_2">双生匕首</string>
    <string name="Ab3_1">火球术</string>
    <string name="Ab3_2">清心术</string>


    <string name="contract_us">联系我们\n583288152@qq.com\n409082492@qq.com</string>


    <string name="inputIP">请输入服务器的IP地址</string>
</resources>
