<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingTop="15dp"
        android:stretchColumns="*">
        <TableRow
            android:gravity="center">
        <TextView
            android:id="@+id/name"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/userid"
            android:textSize="20sp"
            android:gravity="center"
            android:ellipsize="end"
            android:lines="1"
            />

        <TextView
            android:id="@+id/experience"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/exp"
            android:textSize="20sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/money"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/money"
            android:textSize="20sp"
            android:gravity="center"
            />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/Leftframe"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/talent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/tianfu"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/skill"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/skill"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/pvp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/pvp"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/pve"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/pve"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:id="@+id/Rightframe"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/str"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/intel"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/agi"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/luc"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/atk"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/def"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
