<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TableLayout
        android:id="@+id/ability_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingTop="20dp"
        android:stretchColumns="*">
        <TableRow
            android:gravity="center"
            android:background="#000000">
            <TextView
                android:id="@+id/ability_name"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/userid"
                android:textSize="20sp"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:background="#ffffff"
                android:layout_marginRight="1dp"
                />

            <TextView
                android:id="@+id/ability_exp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/exp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="#ffffff"
                />

        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:id="@+id/ability_connect"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/Ab_bottomRlayout"
        android:layout_margin="5dp">
        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/Ab_remainTalent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="剩余点数:"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/Ab_remainTalent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Ab_remainTalent"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/Ab_confirm"
                android:text="@string/confirm"
                android:background="@drawable/btnstyle"
                android:textSize="20sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/Ab_return"
                android:text="@string/ret"
                android:background="@drawable/btnstyle"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/Ab_confirm"
                android:layout_marginLeft="10dp"
                />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Ab_bottomRlayout"
        android:layout_below="@+id/ability_top"
        android:orientation="vertical"
        android:id="@+id/Ab_mid_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:id="@+id/Ability_1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:id="@+id/Ability_1_img"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:id="@+id/Ability_1_lv"

                android:textSize="20sp"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:id="@+id/Ability_1_txt"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:id="@+id/Ability_2"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:id="@+id/Ability_2_img"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:id="@+id/Ability_2_lv"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:id="@+id/Ability_2_txt"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
