<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:id="@+id/mineinf"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="名字先占好字节"
                android:id="@+id/pvp_mine_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="lv"
                android:id="@+id/pvp_mine_level"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="HP"
                android:id="@+id/pvp_mine_health"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pvp_mine_siatad"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/str"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/intel"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/agi"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/luc"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/atk"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/def"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/pvp_mine_siatad"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_str"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_int"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_agi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_luc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_atk"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_mine_def"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/enemyinf"
        android:layout_toRightOf="@+id/mineinf">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pvp_listview"></ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:id="@+id/enemyinf"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="名字先占好字节"
                android:id="@+id/pvp_enemy_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="lv"
                android:id="@+id/pvp_enemy_level"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="HP"
                android:id="@+id/pvp_enemy_health"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pvp_enemy_siatad"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/str"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/intel"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/agi"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/luc"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/atk"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:text="@string/def"
                    android:textSize="20sp"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/pvp_enemy_siatad"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_str"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_int"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_agi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_luc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_atk"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="100"
                    android:textSize="20sp"
                    android:id="@+id/pvp_enemy_def"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
